[QuangHV]: Config Exclude for select false - password of UserEntity
